@@ -1,5 +1,3 @@
-#! /bin/sh
-
 ## Usage is
 ##   sh help-print.sh FILE TOPIC LATEX DVIPS
 ## see src/library/utils/R/unix/help.R.
@@ -18,13 +16,24 @@ if test "${DVIPS}" = "false"; then
     exit 2
 fi
 ODIR=`pwd`
+status=0
 cd `(dirname "${FILE}") 2>/dev/null || \
      echo "${FILE}" | ${SED=sed} -e 's,[^/]*$,,;s,/$,,;s,^$,.,'`
-${LATEX} "\\nonstopmode\\input{${FILE}}" >/dev/null 2>&1
-${DVIPS} "${FILE}" 2>/dev/null
+${LATEX} "\\nonstopmode\\input{${FILE}}" >/dev/null 2>&1  || status=1
+if test $status -gt 0; then
+  echo "Error in running latex command ('${LATEX}')"
+  exit 1
+fi
+${DVIPS} "${FILE}" 2>/dev/null || status=1
+if test $status -gt 0; then
+  echo "Error in running dvips command ('${DVIPS}')"
+  exit 1
+fi
 if test -f "${FILE}.ps"; then
-    echo "Saving help page to '${TOPIC}.ps'"
-    mv "${FILE}.ps" "${ODIR}/${TOPIC}.ps"
+  echo "Saving help page to '${TOPIC}.ps'"
+  mv "${FILE}.ps" "${ODIR}/${TOPIC}.ps"
+else
+  echo "Help page sent to printer" 
 fi
 rm -f "${FILE}.aux" "${FILE}.dvi" "${FILE}.log"
 
